// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute crypto api should return success 1`] = `
Object {
  "data": Object {
    "result": 4478.930333561968,
  },
  "jobRunID": "1",
  "result": 4478.930333561968,
  "statusCode": 200,
}
`;

exports[`execute marketcap api should return success 1`] = `
Object {
  "data": Object {
    "result": 527538906196,
  },
  "jobRunID": "1",
  "result": 527538906196,
  "statusCode": 200,
}
`;
